--- a/src/main/resources/static/rotating.css
+++ b/src/main/resources/static/rotating.css
@@ -82,13 +82,14 @@
 
 
 /*mobile rotating*/
-.mbp {
-    margin-top: 25%;
+.rotatingText-mobile {
+    font-family: 'Nunito', sans-serif;;
+    font-style: italic;
+    font-size: 30px;
+    text-align: center;
+    color: white;
 }
 
-.mb-card {
-    margin-top: 50%;
-}
 .rotatingText-adjective-mobile {
     font-family: 'Nunito', sans-serif;
     font-size: 30px;
@@ -96,7 +97,7 @@
     font-weight: 700;
     left: 0;
     margin-bottom: 0;
-    margin-top: 50%;
+    margin-top: 50vh;
     opacity: 0;
     position: absolute;
     right: 0;
